--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <video id="video" autoplay playsinline></video>
 
   <script>
-    const signalingUrl = 'wss://sharescreenserver-toum.onrender.com';
+    const signalingUrl = 'wss://sharescreenserver-toum.onrender.com'; // Replace this if needed
     const ws = new WebSocket(signalingUrl);
     const video = document.getElementById('video');
     const startBtn = document.getElementById('startBroadcastBtn');
@@ -61,17 +61,15 @@
     let peerConnection;
     let localStream;
     let pendingCandidates = [];
-    const pendingCandidatesMap = {}; // viewerId => candidate[]
 
     ws.onopen = () => {
       console.log('[WS] Connected');
-
       if (role === 'broadcaster') {
         startBtn.style.display = 'block';
         startBtn.onclick = async () => {
+          ws.send(JSON.stringify({ type: 'broadcaster', from: clientId }));
           startBtn.style.display = 'none';
           await startBroadcast();
-          ws.send(JSON.stringify({ type: 'broadcaster', from: clientId }));
         };
       } else if (role === 'viewer') {
         ws.send(JSON.stringify({ type: 'viewer', from: clientId }));
@@ -115,74 +113,76 @@
           }));
         } else if (data.type === 'answer') {
           if (peerConnection) {
-            await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'answer', sdp: data.sdp }));
-            console.log('[Broadcaster] Set remote description from viewer:', data.from);
-
-            // Apply any queued candidates now
-            const queued = pendingCandidatesMap[data.from] || [];
-            for (const c of queued) {
-              try {
-                await peerConnection.addIceCandidate(c);
-              } catch (e) {
-                console.error('Broadcaster failed to add queued ICE candidate:', e);
-              }
+            try {
+              await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'answer', sdp: data.sdp }));
+              console.log('[Broadcaster] Set remote description from viewer:', data.from);
+            } catch (e) {
+              console.error('[Broadcaster] Failed to set remote description:', e);
             }
-            delete pendingCandidatesMap[data.from];
           }
         } else if (data.type === 'candidate') {
-          if (peerConnection) {
-            if (peerConnection.remoteDescription) {
-              try {
-                await peerConnection.addIceCandidate(data.candidate);
-              } catch (e) {
-                console.error('Broadcaster failed to add ICE candidate:', e);
-              }
-            } else {
-              // Queue until SDP is set
-              if (!pendingCandidatesMap[data.from]) {
-                pendingCandidatesMap[data.from] = [];
-              }
-              pendingCandidatesMap[data.from].push(data.candidate);
+          if (peerConnection && peerConnection.remoteDescription) {
+            try {
+              await peerConnection.addIceCandidate(data.candidate);
+              console.log('[Broadcaster] Added ICE candidate');
+            } catch (e) {
+              console.error('[Broadcaster] Failed to add ICE candidate:', e);
             }
+          } else {
+            console.log('[Broadcaster] Ignored ICE candidate because remote description is not set yet');
           }
         }
       }
 
       if (role === 'viewer') {
         if (data.type === 'offer') {
+          console.log('[Viewer] Received offer from broadcaster:', data.from);
           broadcasterId = data.from;
           if (!peerConnection) createPeerConnection();
 
-          await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'offer', sdp: data.sdp }));
+          try {
+            await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'offer', sdp: data.sdp }));
+            console.log('[Viewer] Remote description set');
+          } catch (err) {
+            console.error('[Viewer] Failed to set remote description:', err);
+          }
 
           for (const c of pendingCandidates) {
             try {
               await peerConnection.addIceCandidate(c);
+              console.log('[Viewer] Added queued ICE candidate');
             } catch (e) {
-              console.error('Viewer failed to add queued ICE candidate:', e);
+              console.error('[Viewer] Failed to add queued ICE candidate:', e);
             }
           }
           pendingCandidates = [];
 
-          const answer = await peerConnection.createAnswer();
-          await peerConnection.setLocalDescription(answer);
+          try {
+            const answer = await peerConnection.createAnswer();
+            await peerConnection.setLocalDescription(answer);
+            console.log('[Viewer] Created and set local answer');
 
-          ws.send(JSON.stringify({
-            type: 'answer',
-            sdp: answer.sdp,
-            from: clientId,
-            to: broadcasterId
-          }));
-          console.log('[Viewer] Sent answer');
+            ws.send(JSON.stringify({
+              type: 'answer',
+              sdp: answer.sdp,
+              from: clientId,
+              to: broadcasterId
+            }));
+            console.log('[Viewer] Sent answer');
+          } catch (err) {
+            console.error('[Viewer] Error during answer creation or sending:', err);
+          }
         } else if (data.type === 'candidate') {
           const candidate = data.candidate;
           if (peerConnection && peerConnection.remoteDescription) {
             try {
               await peerConnection.addIceCandidate(candidate);
+              console.log('[Viewer] Added ICE candidate');
             } catch (e) {
-              console.error('Viewer failed to add ICE candidate:', e);
+              console.error('[Viewer] Failed to add ICE candidate:', e);
             }
           } else {
+            console.log('[Viewer] Queueing ICE candidate until remote description is set');
             pendingCandidates.push(candidate);
           }
         }
@@ -203,12 +203,16 @@
       peerConnection = new RTCPeerConnection(config);
 
       peerConnection.ontrack = event => {
-        console.log('[Viewer] Stream received');
+        console.log('[Viewer] Stream received', event.streams);
         video.srcObject = event.streams[0];
+        // Mute and play to avoid autoplay block
+        video.muted = true;
+        video.play().catch(e => console.warn('[Viewer] Autoplay blocked:', e));
       };
 
       peerConnection.onicecandidate = e => {
         if (e.candidate && broadcasterId) {
+          console.log('[Viewer] Sending ICE candidate to broadcaster:', e.candidate);
           ws.send(JSON.stringify({
             type: 'candidate',
             candidate: e.candidate,
@@ -216,6 +220,14 @@
             to: broadcasterId
           }));
         }
+      };
+
+      peerConnection.onconnectionstatechange = () => {
+        console.log('[Viewer] Connection state:', peerConnection.connectionState);
+      };
+
+      peerConnection.oniceconnectionstatechange = () => {
+        console.log('[Viewer] ICE connection state:', peerConnection.iceConnectionState);
       };
     }
 
